; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_unwind-dw2.c__Unwind_GRByValue.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_unwind-dw2.c__Unwind_GRByValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._Unwind_Context = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct._Unwind_Context*, i32)* @_Unwind_GRByValue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_Unwind_GRByValue(%struct._Unwind_Context* %0, i32 %1) #0 {
  %3 = alloca %struct._Unwind_Context*, align 8
  %4 = alloca i32, align 4
  store %struct._Unwind_Context* %0, %struct._Unwind_Context** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @DWARF_REG_TO_UNWIND_COLUMN(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load %struct._Unwind_Context*, %struct._Unwind_Context** %3, align 8
  %8 = getelementptr inbounds %struct._Unwind_Context, %struct._Unwind_Context* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  ret i32 %13
}

declare dso_local i32 @DWARF_REG_TO_UNWIND_COLUMN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
